--- a/style.css
+++ b/style.css
@@ -13,3 +13,8 @@ body {
     margin: auto;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
 }
+
+#count {
+    font-size: 48px;
+    margin: 20px 0;
+}
